deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-churn-dashboard
  namespace: service-churn-dev
spec:
  selector:
    app: service-churn-dashboard
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
